# mp-fcb

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: main_endpoints.py  old_apart_table.py
app/core/: config.py  database.py
app/domain/dtos/: old_apart.py  stages.py
app/domain/entities/: old_apart.py  old_apart_steps_history.py  problems.py  status.py  step.py
app/domain/repositories/: old_apart.py  problems.py
app/domain/services/: rsm_service.py
frontend/: package copy.json  package-lock.json  package.json  tailwind.config.js
frontend/src/: AddAffairModal.jsx  AffairsHistory.jsx  AffairsPage.jsx  AffairsTable.jsx  AffairsTimeline.jsx  App.jsx  StageCompletionForm.jsx  exampleData.js  main.jsx
